--- a/.classpath
+++ b/.classpath
@@ -26,6 +26,6 @@
 	<classpathentry kind="lib" path="lib/s2-tiger-2.4.46.jar" sourcepath="lib/sources/s2-tiger-2.4.46-sources.jar"/>
 	<classpathentry kind="lib" path="lib/s2jdbc-gen-2.4.46.jar"/>
 	<classpathentry kind="lib" path="lib/svnkit-1.2.0.4949.jar"/>
-	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jsonic-1.3.7.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
