--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="lib/s2jdbc-gen-2.4.46.jar"/>
 	<classpathentry kind="lib" path="lib/svnkit-1.2.0.4949.jar"/>
 	<classpathentry kind="lib" path="lib/jsonic-1.3.7.jar"/>
+	<classpathentry kind="lib" path="lib/javax.ejb-api-3.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
