--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="lib/svnkit-1.2.0.4949.jar"/>
 	<classpathentry kind="lib" path="lib/jsonic-1.3.7.jar"/>
 	<classpathentry kind="lib" path="lib/javax.ejb-api-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jtds-1.3.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
