--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
+#Tue Jan 13 10:17:17 JST 2015
 eclipse.preferences.version=1
 encoding//procfiles/childData.txt=MS932
+encoding//procfiles/parentData.txt=MS932
 encoding/<project>=UTF-8
