集合項目の扱いを修正

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Tue Jan 13 10:17:17 JST 2015
+#Fri Jan 16 18:07:22 JST 2015
 eclipse.preferences.version=1
+encoding//procfiles/aggtestParentData.txt=MS932
 encoding//procfiles/childData.txt=MS932
 encoding//procfiles/parentData.txt=MS932
 encoding/<project>=UTF-8
